[package]
name = "hello_cargo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.11", features = ["derive"] }
futures = "0.3.29"
reqwest = "0.11.23"
serial_test = "2.0.0"
tokio = { version = "1.35.0", features = ["full"] }
warp = "0.3"
